# C-FFI

call-python/: .gitignore  CMakeLists.txt  call_python.cpp
call-rust/: Cargo.toml  Makefile  main.cpp
call-rust/src/: lib.rs
python-call/: .gitignore  cls.cpp  fn.cpp  test_cls.py  test_fn.py
python-call-swig/: CMakeLists.txt  example.i
python-call/boost/: CMakeLists.txt  cls.cpp  fn.cpp  test_cls.py  test_fn.py
python-call/swig/: .gitignore  CMakeLists.txt  example.cpp  example.hpp  example.i
python-embedding/: CMakeLists.txt  embedding.cpp  embedding.py
rust-embedding/: .gitignore  Cargo.toml  Makefile  main.c  main.cpp
rust-embedding/src/: lib.rs
